[gd_scene load_steps=5 format=3 uid="uid://boomj3emhw4h1"]

[ext_resource type="Script" uid="uid://do21qrae7lq66" path="res://scenes/scrap.gd" id="1_asfl2"]
[ext_resource type="Texture2D" uid="uid://c7a3m1q2wywhh" path="res://assets/Ruby.png" id="2_4cf2d"]
[ext_resource type="Texture2D" uid="uid://m5snyu36ktfb" path="res://assets/ui/space_ico.png" id="3_whrae"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f7d5k"]
radius = 9.0

[node name="ruby" type="Area2D" groups=["scrap"]]
script = ExtResource("1_asfl2")
scrap_name = "ruby"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_4cf2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_f7d5k")

[node name="keyHint" type="Sprite2D" parent="."]
visible = false
z_index = 8
texture_filter = 1
position = Vector2(2, -19)
texture = ExtResource("3_whrae")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
